ecmascript/parser/tests/test262-error-references/fail/98e0b4521b7ec370.module.js.stderr
error: Expected {, got ;
 --> $DIR/tests/test262-parser/fail/98e0b4521b7ec370.module.js:1:7
  |
1 | export;
  |       ^

